Alignment issues fixes on input-group widgets(currency, color picker etc) within live widgets(form, list etc)

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -694,7 +694,7 @@ html, body {
   .form-control-static + .app-chips li:last-child  {
     width: 100%;
   }
-  .form-control-static + .form-control, .form-control-static + .form-control + .help-block, .form-control-static + li:last-child > .app-chip-input  {
+  .form-control-static + .form-control, .form-control-static + .form-control + .help-block, .form-control-static + li:last-child > .app-chip-input, .form-control-static + .input-group  {
     width: 75%;
     margin: 0;
   }
